outputtelem/legacy_main_20260228_192123_stderr.txt
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\Users\rick\projects\Atlas\src\Atlas\engine\main.py", line 821, in <module>
    main()
  File "C:\Users\rick\projects\Atlas\src\Atlas\engine\main.py", line 771, in main
    slips = run_build_slips(
            ^^^^^^^^^^^^^^^^
  File "C:\Users\rick\projects\Atlas\src\Atlas\stages\optimize\build_slips_today.py", line 38, in run_build_slips
    from Atlas.core.slip_builders import build_system_slips, build_windfall_slips, expand_legs
  File "C:\Users\rick\projects\Atlas\src\Atlas\core\slip_builders.py", line 792
    try:
    ^
IndentationError: expected an indented block after 'if' statement on line 791
